--- a/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,31 @@
-<p>recipe-list works!</p>
+<div class="row">
+  <div class="col-12">
+    <button class="btn btn-success">New Recipes</button>
+  </div>
+</div>
+<hr />
+
+<div class="row">
+  <div class="col-12">
+    <a
+      href="#"
+      class="list-group-item d-flex justify-content-between align-items-center"
+      *ngFor="let recipe of recipes"
+    >
+      <div>
+        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+        <p class="list-group-item-text">{{ recipe.description }}</p>
+      </div>
+      <span>
+        <img
+          src="{{ recipe.imagePath }}"
+          alt="{{ recipe.description }}"
+          class="img-fluid"
+          style="max-height: 50px"
+        />
+      </span>
+    </a>
+    <hr />
+    <app-recipe-item></app-recipe-item>
+  </div>
+</div>
